added ws-commons-util to pom.xml but did not solve error

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.util</groupId>
+            <artifactId>ws-commons-util</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>dokpool-client</finalName>
