--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>de.bfs</groupId>
     <artifactId>dokpool-client</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0</version>
+    <version>1.2-SNAPSHOT</version>
     <name>Dokpool xmlrpc client</name>
     <organization>
         <name>German Federal Office for Radiation Protection</name>
