--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 	<url>http://www.bfs.de</url>
 	<dependencies>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-client</artifactId>
 			<version>3.1.3</version>
