further testing and adopt conding style from non-test classes

--- a/.testenv.example
+++ b/.testenv.example
@@ -1,6 +1,8 @@
-DOKPOOL_PROTO=https
-DOKPOOL_HOST=host
-DOKPOOL_PORT=port
-DOKPOOL_PLONESITE=site
-DOKPOOL_USER=user
-DOKPOOL_PW=pw
+export DOKPOOL_PROTO=https
+export DOKPOOL_HOST=host
+export DOKPOOL_PORT=port
+export DOKPOOL_PLONESITE=site
+export DOKPOOL_DOKPOOL=bund
+export DOKPOOL_GROUPFOLDER=grouo_folder
+export DOKPOOL_USER=user
+export DOKPOOL_PW=pw
