--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.15.3</version>
+			<version>2.18.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.18.1</version>
 		</dependency>
 	</dependencies>
 	<build>
