--- a/.testenv.example
+++ b/.testenv.example
@@ -2,16 +2,12 @@
 DOKPOOL_PROTO=https
 DOKPOOL_HOST=host
 DOKPOOL_PORT=port
-#Second Test instance, must be Plone5 with XMLRPC for now, will be removed
-DOKPOOL_PROTOP5=https
-DOKPOOL_HOSTP5=hostp5
-DOKPOOL_PORTP5=portp5
 DOKPOOL_PLONESITE=site
 DOKPOOL_DOKPOOL=bund
 DOKPOOL_GROUPFOLDER=grouo_folder
 DOKPOOL_DOCUMENTOWNER=user
 #The following user should have an associated user folder in DOKPOOL_DOKPOOL
-DOKPOOL_MEMBER=nvo--loc
+DOKPOOL_MEMBER=nvo-loc
 DOKPOOL_EVENT=routinemode
 #The UID may or may not belong to the event above
 DOKPOOL_EVENTUID="8aa08ebe53ec4e58ad3f41fd5209c76d"
