--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>de.bfs</groupId>
 	<artifactId>dokpool-client</artifactId>
 	<packaging>jar</packaging>
-	<version>3.1-SNAPSHOT</version>
+	<version>3.1</version>
 	<name>Dokpool REST API Client</name>
 	<organization>
 		<name>German Federal Office for Radiation Protection</name>
