--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>[2.18.2,3.0.0)</version>
+			<version>[2.18.2,2.99.0]</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>[2.18.2,3.0.0)</version>
+			<version>[2.18.2,2.99.0]</version>
 		</dependency>
 	</dependencies>
 	<build>
