--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>de.bfs</groupId>
 	<artifactId>dokpool-client</artifactId>
 	<packaging>jar</packaging>
-	<version>3.2-SNAPSHOT</version>
+	<version>3.2.0</version>
 	<name>Dokpool REST API Client</name>
 	<organization>
 		<name>German Federal Office for Radiation Protection</name>
@@ -35,12 +35,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>[2.18.2,2.99.0]</version>
+			<version>[2.18.3,2.99.0]</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>[2.18.2,2.99.0]</version>
+			<version>[2.18.3,2.99.0]</version>
 		</dependency>
 	</dependencies>
 	<build>
